Add AddClusterNodes and DeleteClusterNodes api
