# pkg/apigateway/spec/api.swagger.json
@@ -2821,6 +2821,9 @@
           "type": "string",
           "format": "byte"
         },
+        "app_id": {
+          "type": "string"
+        },
         "version_id": {
           "type": "string"
         }
@@ -3686,9 +3689,6 @@
       "type": "object",
       "properties": {
         "cluster_id": {
-          "type": "string"
-        },
-        "role": {
           "type": "string"
         },
         "node_id": {
